google_api_key="AIzaSyDEAOvatFo0eTgsV_ZlEzx0ObmepsMzfAc"
google_default_client_id="329227923882.apps.googleusercontent.com"
google_default_client_secret="vgKG0NNv7GoDpbtoFNLxCUXu"
use_ozone=true
#ozone_platform_x11=false
ozone_platform_headless=false
ozone_platform_gbm=true
#use_system_libdrm=true
ozone_platform_wayland=true
#ozone_platform="wayland"
enable_package_mash_services=true
use_xkbcommon=true
is_debug=false
symbol_level=0
remove_webcore_debug_symbols=true
enable_hangout_services_extension=false
enable_widevine = false
use_cups=false
use_gconf=false
use_kerberos=false
use_pulseaudio=true
proprietary_codecs=true
treat_warnings_as_errors=false
use_sysroot=false
use_allocator="tcmalloc"
enable_webrtc=false
ffmpeg_branding="Chrome"
enable_nacl=false
enable_linux_installer=false
use_custom_libcxx=false
enable_media_remoting=false
use_gio=false
use_glib=false
use_base_test_suite=false
enable_nocompile_tests=false
#custom_toolchain="//toolchain:default"
clang_base_path="/usr/lib64/llvm/5"
clang_use_chrome_plugins=false
pdf_enable_v8=false
rtc_build_libsrtp=false
rtc_build_openmax_dl=false
rtc_use_openmax_dl=false
rtc_enable_sctp=false
rtc_build_json=false
mojo_media_host="utility"
